@@ -1,8 +1,8 @@
 Package: FRESA.CAD
 Type: Package
 Title: Feature Selection Algorithms for Computer Aided Diagnosis
-Version: 3.3.0
-Date: 2020-09-29
+Version: 3.3.1
+Date: 2021-04-29
 Author: Jose Gerardo Tamez-Pena, Antonio Martinez-Torteya, Israel Alanis and Jorge Orozco
 Maintainer: Jose Gerardo Tamez-Pena <jose.tamezpena@tec.mx>
 Description: Contains a set of utilities for building and testing statistical models (linear, logistic,ordinal or COX) for Computer Aided Diagnosis/Prognosis applications. Utilities include data adjustment, univariate analysis, model building, model-validation, longitudinal analysis, reporting and visualization.
@@ -11,5 +11,5 @@ Depends: Rcpp (>= 0.10.0),stringr,miscTools,Hmisc,pROC
 LinkingTo: Rcpp, RcppArmadillo
 Suggests:
         nlme,rpart,gplots,RColorBrewer,class,cvTools,glmnet,randomForest,survival,e1071,MASS,naivebayes,mRMRe,epiR,DescTools,irr,survminer,BeSS,ggplot2,robustbase,mda,twosamples
-Packaged: 2020-09-29 20:01:22 UTC; jtamez
+Packaged: 2021-04-29 20:01:22 UTC; jtamez
 NeedsCompilation: yes
