@@ -96,7 +96,8 @@ export(GLMNET_RIDGE_1SE)
 export(univariate_cox)
 export(filteredFit)
 export(predict.FRESA_FILTERFIT)
-export(featureDecorrelation);
+export(featureDecorrelation)
+export(predictDecorrelate);
 
 useDynLib(FRESA.CAD,.registration = TRUE)
 
