@@ -1,4 +1,4 @@
-Changes from FRESA.CAD 3.1.1 to FRESA.CAD version 3.3.0
+Changes from FRESA.CAD 3.1.1 to FRESA.CAD version 3.3.1
 	Enhancements:
 		nearestNeighborImpute now can handle longitudinal datasets
 		Benchmarking Survival Models: CoxBenchmark
@@ -7,6 +7,7 @@ Changes from FRESA.CAD 3.1.1 to FRESA.CAD version 3.3.0
 		Hybrid Learning methods: ClustClass and GMVEBSWiMS
 		Longitudinal Features: trajectoriesPolyFeatures
 		Train prediction Wrappers for: BeSS and glmnet objects
+	    featureDecorrelation for the estimation of an outcome-steered decorrelated dataframe
 	Bugs:
 	-Try added to prediction, to avoid crashing errors.
 	Minor Changes:
